<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/bottomSheeContainer"
    android:background="@drawable/bottomshe_background"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:padding="15dp"
        android:id="@+id/popUpDescriptionTextView"
        android:gravity="center"
        android:text="Profile"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_height="wrap_content">
        
    </TextView>
    
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:background="@color/colorDevider"
        android:layout_height="1dp">
    </View>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">


        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/mapsItemProfile"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/map"
                android:layout_height="match_parent">

            </ImageView>
            
            


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_height="match_parent">
            
            
            <TextView
                android:layout_width="match_parent"
                android:text="Profile Status"
                android:id="@+id/popUpDescriptionTextViewTwo"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:layout_height="wrap_content">


            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:text="Profile Status"
                android:id="@+id/popUpDescriptionTextViewThreee"
                android:textSize="15sp"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_height="wrap_content">


            </TextView>


            <TextView
                android:layout_width="match_parent"
                android:text="location "
                android:id="@+id/popLocationTexview"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_height="wrap_content">


            </TextView>




        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorDevider">
        
    </View>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">



        <com.varunest.sparkbutton.SparkButton
            android:id="@+id/likes"
            android:layout_width="35dp"
            android:layout_gravity="center"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            app:sparkbutton_activeImage="@drawable/ic_heart_red"
            app:sparkbutton_inActiveImage="@drawable/heart_seletor"
            app:sparkbutton_iconSize="30dp"
            app:sparkbutton_primaryColor="@color/Orrnge"
            app:sparkbutton_secondaryColor="@color/AlertRed">


        </com.varunest.sparkbutton.SparkButton>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addToFavouriteTextView"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"
            android:text="@string/add_to_favourite"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp">


        </TextView>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp">



        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/shareImageView"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_share"
            android:layout_marginStart="10dp">


        </androidx.appcompat.widget.AppCompatImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:id="@+id/share"
            android:layout_marginEnd="25dp"
            android:text="@string/share_via"
            android:textColor="@color/colorPrimaryText"
            android:textSize="15sp">


        </TextView>



    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:text="View Profile"
        android:id="@+id/visitProfile"
        android:clickable="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:background="@drawable/button_background_popup"
        >

    </Button>
    



</androidx.appcompat.widget.LinearLayoutCompat>