<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/homeFragment"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:id="@+id/discoverLayout"
            android:backgroundTint="#55000000"
            android:background="@drawable/gradient_background_maps"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:backgroundTint="#55000000"
                android:background="@drawable/gradient_background_maps"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:id="@+id/iconstand"
                    app:cardCornerRadius="23dp"
                    android:background="#55000000"
                    android:backgroundTint="#55000000"
                    android:layout_marginTop="5dp"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="-56dp"
                    android:layout_marginStart="5dp">


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:background="#55000000"
                        android:backgroundTint="#55000000"
                        android:orientation="horizontal">




                    </androidx.cardview.widget.CardView>



                </androidx.cardview.widget.CardView>





                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/EndBlue"
                    android:textSize="50sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/robobold"
                    android:text="@string/discover_na_new_world"
                    android:layout_height="wrap_content">


                </TextView>

                <LinearLayout
                    android:id="@+id/searchTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:backgroundTint="#fff"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/white_border"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:focusable="true"
                    tools:ignore="TouchTargetSizeCheck">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:contextClickable="true"
                        android:orientation="horizontal">


                        <Spinner
                            android:id="@+id/searchSpinner"
                            android:layout_width="60dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:clickable="true"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

                        </Spinner>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="2dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <com.mikhaellopez.circularimageview.CircularImageView
                                android:id="@+id/nearbyLocation"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center_vertical"
                                android:focusable="true"
                                android:src="@drawable/pagiis_onlineusers_finder"
                                android:text="@string/SearchLocation"
                                android:textSize="10sp" />

                        </LinearLayout>


                    </LinearLayout>




                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/searchEdittext"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_marginEnd="45dp"
                            android:layout_marginStart="2dp"
                            android:layout_alignParentEnd="true"
                            android:hint="Type location"
                            android:textAlignment="textStart"
                            android:textColor="@color/BlueishBlack"
                            android:textColorHint="@color/places_ui_default_primary_dark"
                            android:textSize="15sp"
                            tools:ignore="RtlCompat,TouchTargetSizeCheck,TouchTargetSizeCheck">


                        </androidx.appcompat.widget.AppCompatEditText>


                        <ImageView
                            android:id="@+id/LogSearchIconGo"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentBottom="true"
                            android:layout_gravity="center"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="3dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginBottom="10dp"
                            android:clickable="true"
                            android:contextClickable="true"
                            android:focusable="true"
                            android:src="@drawable/loupe"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
                            android:contentDescription="TODO" />



                    </RelativeLayout>





                </LinearLayout>

                <ListView
                    android:id="@+id/lvPlaceSuggestions"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:visibility="gone"
                    android:background="@android:color/white"/>





                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/popular"
                    android:textSize="20sp"
                    android:fontFamily="@font/robobold"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/EndBlue"
                    android:layout_height="wrap_content">

                </TextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mapsProfileCategory"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:background="#55000000"
                    android:backgroundTint="#55000000"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="75dp">


                </androidx.recyclerview.widget.RecyclerView>




            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:id="@+id/iconstand2"
            app:cardCornerRadius="23dp"
            android:background="#55000000"
            android:backgroundTint="#55000000"
            android:layout_marginTop="5dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="-56dp"
            android:layout_marginStart="5dp">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="#55000000"
                android:backgroundTint="#55000000"
                android:orientation="horizontal">


                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/PAGiiS_ICON"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:contextClickable="true"
                    android:src="@drawable/pagiis_splash_logo_edit_final_r"
                    tools:ignore="SpeakableTextPresentCheck" />



            </androidx.cardview.widget.CardView>



        </androidx.cardview.widget.CardView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-1dp">


        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/businessId"
            android:layout_width="83dp"
            android:layout_height="73dp"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:src="@drawable/media"
            tools:ignore="SpeakableTextPresentCheck" />


        <ProgressBar
            android:id="@+id/progress_circle_user_memes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

        </ProgressBar>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/SearchRecyclerViewTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="#55000000"
            android:backgroundTint="#55000000"
            android:contextClickable="true"
            android:orientation="vertical">

        </androidx.recyclerview.widget.RecyclerView>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/goToVideos"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="140dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:src="@drawable/video_camera"
            app:fabCustomSize="40dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/goToMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="90dp"
            android:backgroundTint="#FFFFFF"
            android:clickable="true"
            android:src="@drawable/map"
            app:fabCustomSize="40dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />



    </RelativeLayout>

</FrameLayout>